# apx2tgf

./: Cargo.toml  LICENSE  README.md
local_crates/crusti_arg/: Cargo.toml
local_crates/crusti_arg/local_crates/crusti_app_helper-v0.1.0-dev/src/: lib.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/: Cargo.toml  LICENSE
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/: lib.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/core/: formula.rs  formula_node.rs  literal.rs  mod.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/languages/: flat_formulas.rs  literal_set_formulas.rs  mod.rs  nnf_formula.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/queries/: mod.rs  subsumption.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/sat/: cadical_sat_solver.rs  equivalence.rs  mod.rs  sat_solver.rs  tseitin_encoder.rs  var_mapper_solver.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/transformations/: conditioning.rs  mod.rs  negation.rs  var_replacement.rs
local_crates/crusti_arg/local_crates/crusti_logic-v0.1.0-dev/src/utils/: maybe_trivial.rs  mod.rs  rc_mut.rs  rc_mut_mt.rs
local_crates/crusti_arg/src/: bin.rs  lib.rs
local_crates/crusti_arg/src/aa/: aa_framework.rs  arguments.rs
local_crates/crusti_arg/src/aa/io/: aspartix_reader.rs  aspartix_writer.rs  mod.rs  solutions.rs  tgf_writer.rs
local_crates/crusti_arg/src/app/: apx_check_command.rs  mod.rs
src/: main.rs
src/app/: argument_command.rs  extension_command.rs  framework_command.rs  mod.rs  (+1 more)
(+2 files in other folders)
