[package]
name = "crusti_arg"
version = "0.3.0"
license = "GPL-3.0-only"
authors = ["Lonca Emmanuel <lonca@cril.fr>"]
edition = "2018"
publish = false
categories=["encoding", "science"]
keywords = ["argumentation", "assumption", "abstract", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crusti_arg"
path = "src/lib.rs"

[[bin]]
name = "crusti_arg"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.32"
crusti_app_helper = { path = "../crusti_app_helper" }
crusti_logic = { path = "local_crates/crusti_logic-v0.1.0-dev/" }
lazy_static = "1.4.0"
regex = "1.3.9"

[dev-dependencies]
logtest = "2.0.0"
tempfile = "3.1.0"
