[package]
name = "crusti_logic"
version = "0.1.0"
authors = ["Lonca Emmanuel <emmanuel.lonca@univ-artois.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mt = []

[dependencies]
anyhow = "1.0.38"
cadical = "0.1.13"
rustc-hash = "1.1.0"
